2001-07-04  Chris COCOSCO  <crisco@feeble.bic.mni.mcgill.ca>

	* MNI/TagSet.pm (load) : fixed input parsing to match the tag
	file format as defined by the volume_io documentation

	* MNI/TagPoint.pm (to_string) : fixed output to match what
	volume_io is doing

	* MNI/TagSet.pm (find_tag): new function

	* MNI/TagSet.pm (fast_find_tag): new function

2001-06-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI/Batch.pm (JobStatus): Set verbose and execute options for
	the spawner.  Cache "baq" output for 60 seconds to avoid invoking
	this command too often (it is slow).

2001-06-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI/Batch.pm (_emit_syncfile_shellcode): Use "touch" and "mv"
	to create syncfile; avoids problems if "touch" wants to examine
	the file after creating it (SGI does this).  Thanks to Chris
	for uncovering this.

2001-06-09  Chris Cocosco  <crisco@bic.mni.mcgill.ca>

	* MNI/Spawn.pm (set_undefined_option): also try main::$varname if
	the calling package doesn't define/export $varname (bugfix for
	MNI/Batch.pm::JobStatus)

2001-02-26  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI/Batch.pm (GetJobid): New.  Returns ID of currently-open job.

	* MNI.pm: Set VERSION to 0.07.

	* MNI/Batch.pm (JobStatus): New.  Return status of job, as
	determined by "baq".

2000-09-22  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/TagSet.pm (new): option name is `comment' not `comments'.
	(get_point): bugfix; used `grep' where should have used `map'.
	Localize all usages of `$_'.

2000-09-19  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/TagSet.pm:
	* MNI/TagPoint.pm: new.  Future replacement of MNI::Tag.
	A TagSet corresponds to a `.tag' file; it holds a list of
	TagPoint objects.  The TagPoint objects allow read access to
	all fields in the tag.

	* t/tag.t: new.  Exercise the MNI::TagSet.

2000-09-14  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI/Tag.pm: add POD documentation of all user-level functions.
